# edge-first-checkout

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  REQUIREMENTS.md  possible_features.md
backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  couchbase_sync.py  database.py  email.py  main.py  models.py  security.py
couchbase-lite-javascript-demo/: .gitignore  README.md  index.html  main.js  package-lock.json  package.json
couchbase-server-python-demo/: .gitignore  README.md  config.py  database.py  main.py  models.py  requirements.txt  start.sh
dashboard/: .gitignore  index.html  package-lock.json  package.json
dashboard/src/: DashboardApp.jsx  main.jsx  styles.css
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  OPERATIONS.md
docs/diagrams/: architecture.puml
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
plantuml/: architecture.puml
