[project]
name = "edge-first-checkout-backend"
version = "0.1.0"
description = "FastAPI backend for edge-first checkout demo"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.128.7",
  "uvicorn==0.40.0",
  "python-multipart==0.0.22",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "aiosqlite==0.22.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
